use `span` instead of `i` for icon

--- a/common/app/views/fragments/newHeader.scala.html
+++ b/common/app/views/fragments/newHeader.scala.html
@@ -27,7 +27,7 @@
                 @primaryLinks(section.name)
             }
             <label for="main-menu-toggle" class="new-header__nav__menu-button js-change-link" tabindex="0">
-                <i class="new-header__veggie-burger-icon"></i>
+                <span class="new-header__veggie-burger-icon"></span>
                 <span class="u-h">Menu</span>
             </label>
             <input type="checkbox" id="main-menu-toggle" class="new-header__nav__button js-enhance-checkbox" aria-controls="main-menu">
