--- a/static/src/stylesheets/module/experiments/_embed.scss
+++ b/static/src/stylesheets/module/experiments/_embed.scss
@@ -157,10 +157,7 @@
     width: 170px;
 }
 
-.contributions__contribute--no-buttons--control {
-    width: 130px;
-}
-
+.contributions__contribute--no-buttons--control,
 .contributions__contribute--no-buttons--give {
     width: 130px;
 }
