fix for any kind of article

--- a/static/src/stylesheets/module/commercial/_brandbadge.scss
+++ b/static/src/stylesheets/module/commercial/_brandbadge.scss
@@ -139,7 +139,7 @@
     }
 }
 
-.content__main-column--article {
+.content__main-column {
     .brandbadge--onside {
         @include mq(leftCol) {
             float: none;
