--- a/static/src/stylesheets/module/commercial/_brandbadge.scss
+++ b/static/src/stylesheets/module/commercial/_brandbadge.scss
@@ -141,7 +141,7 @@
 
 .content__main-column {
     .brandbadge--onside {
-        @include mq(leftCol) {
+        @include mq(tablet) {
             float: none;
         }
     }
