--- a/static/src/stylesheets/module/commercial/glabs/_hosted.scss
+++ b/static/src/stylesheets/module/commercial/glabs/_hosted.scss
@@ -731,6 +731,10 @@ $hosted-video-height: 540px;
             height: 20px;
         }
     }
+    .hosted-page:not(.hosted-page--bright) & {
+        background-color: #ffffff;
+        border-color: #ffffff;
+    }
 }
 
 .hosted__cta-link {
