--- a/static/src/javascripts/projects/common/views/contributions-story.html
+++ b/static/src/javascripts/projects/common/views/contributions-story.html
@@ -3,7 +3,7 @@
         <div class="contributions__title-container">
             <h2 class="contributions__title contributions__title--epic"><%=title%></h2>
             <div class="contributions__story--icon">
-                <%=image%>
+                <img src="<%=imageHref%>">
             </div>
         </div>
         <%=body%>
@@ -12,7 +12,6 @@
     <a class="js-submit-input contributions__option-button contributions__contribute contributions__contribute--epic contributions__contribute--<%=position%>" href="<%=linkUrl%>" target="_blank">
         Contribute
     </a>
-
 </div>
 
 
