--- a/static/src/stylesheets/module/experiments/_embed.scss
+++ b/static/src/stylesheets/module/experiments/_embed.scss
@@ -140,7 +140,9 @@
     }
 }
 
-
+.contributions__button-group--epic-no-buttons {
+    display: none;
+}
 
 .contributions__button-group--epic {
     margin-bottom: $gs-baseline;
@@ -175,16 +177,13 @@
     .contributions__contribute-embed--bottom {
         margin-top: 0;
     }
-
 }
-
 
 .contributions__title-container {
     display: flex;
     justify-content: space-between;
     width: 100%;
 }
-
 
 .contributions__epic--story {
     padding: 0 $gs-gutter / 4 $gs-baseline $gs-gutter / 4;
