--- a/static/src/stylesheets/module/experiments/_embed.scss
+++ b/static/src/stylesheets/module/experiments/_embed.scss
@@ -12,21 +12,6 @@
     padding: 0 $gs-gutter / 4 $gs-baseline $gs-gutter / 4;
 }
 
-.contributions__kong-control {
-    border-top: 1px solid $multimedia-main-2;
-}
-
-.contributions__kong-kong0 {
-    border-top: 1px solid $multimedia-main-2;
-}
-
-.contributions__kong-kong1 {
-    border-top: 1px solid $news-main-2;
-}
-
-.contributions__kong-kong2 {
-    border-top: 1px solid $maps-support-3;
-}
 
 .contributions__title {
     @include fs-header(2);
@@ -161,8 +146,17 @@
     margin-bottom: $gs-baseline;
 }
 
-.contributions__button-group--epic-no-buttons {
-    display: none;
+.contributions__contribute--no-buttons--today {
+    width: 150px;
+}
+
+.contributions__contribute--no-buttons--make {
+    width: 170px;
+}
+
+.contributions__contribute--no-buttons--control,
+.contributions__contribute--no-buttons--give {
+    width: 130px;
 }
 
 @include mq($from: phablet) {
@@ -185,7 +179,18 @@
 }
 
 
+.contributions__title-container {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
 
 
+.contributions__epic--story {
+    padding: 0 $gs-gutter / 4 $gs-baseline $gs-gutter / 4;
+}
 
+.contributions__story--icon {
+    margin-right: $gs-gutter / -4;
+}
 
