Remove staticBadge switch

--- a/applications/app/views/fragments/galleryHeader.scala.html
+++ b/applications/app/views/fragments/galleryHeader.scala.html
@@ -1,6 +1,5 @@
 @(gallery: model.GalleryPage)(implicit request: RequestHeader)
 
-@import conf.switches.Switches.staticBadgesSwitch
 @import views.support.TrailCssClasses.toneClass
 
 <header class="content__head tonal__head tonal__head--@toneClass(gallery.item)">
@@ -9,7 +8,7 @@
     <h1 class="is-hidden" itemprop="headline">@Html(gallery.item.trail.headline)</h1>
 
     <div class="gs-container">
-        @if(gallery.showBadge || staticBadgesSwitch.isSwitchedOn) {
+        @if(gallery.showBadge) {
             @fragments.commercial.badge(gallery.item, gallery)
         }
 
