--- a/common/app/views/fragments/headDefault.scala.html
+++ b/common/app/views/fragments/headDefault.scala.html
@@ -1,5 +1,4 @@
 @(item: model.ContentType, page: model.Page, showBadge: Boolean = false)(implicit request: RequestHeader)
-@import conf.switches.Switches.staticBadgesSwitch
 
 <header class="content__head u-cf">
     <div class="gs-container">
@@ -13,7 +12,7 @@
                 @fragments.standfirst(item)
             }
 
-            @if(showBadge || staticBadgesSwitch.isSwitchedOn) {
+            @if(showBadge) {
                 @fragments.commercial.badge(item, page)
             }
 
