searching on the new header

--- a/common/app/views/fragments/nav/newHeaderMenu.scala.html
+++ b/common/app/views/fragments/nav/newHeaderMenu.scala.html
@@ -47,10 +47,19 @@
                 @fragments.inlineSvg("profile-36", "icon", List("navigation-group__icon", "navigation-group__profile-icon"))
                 Sign in
             </a></li>
-            <li class="navigation-group__item"><a href="https://www.google.co.uk/advanced_search?q=site:www.theguardian.com">
-                @fragments.inlineSvg("search-36", "icon", List("navigation-group__icon", "navigation-group__search-icon"))
-                Search
-            </a></li>
+        </ul>
+        <ul class="navigation-group navigation-border secondary-navigation">
+            <li class="navigation-group__item navigation-group__item--search">
+                <form class="navigation-group__search-container js-search-google" action="https://www.google.co.uk/search">
+                    @* label surrounding the input and icon so that if you click the search icon it will trigger the submit *@
+                    <label for="submitgooglesearch">
+                        <input class="u-h" type="submit" id="submitgooglesearch">
+                        @fragments.inlineSvg("search-36", "icon", List("navigation-group__search-icon"))
+                    </label>
+                    <label for="q" class="u-h">What term do you want to search?</label>
+                    <input type="text" name="q" class="navigation-group__search-box js-get-search-term" placeholder="search for...">
+                </form>
+            </li>
         </ul>
 
         @Edition.all.map { edition =>
