--- a/applications/app/views/signup/newsletters.scala.html
+++ b/applications/app/views/signup/newsletters.scala.html
@@ -5,34 +5,41 @@
 
 
 @emailListCategoryList(theme: String, emailListings: List[EmailSubscription], isActive: Boolean) = {
-    @fragments.dropdown(theme, isActive = isActive) {
+    <h1 class="email-signup-header__heading">@theme</h1>
         @emailListings.zipWithRowInfo.map { case (emailListing, row) =>
-            <div class="@RenderClasses(Map(
-                "u-cf" -> true,
-                "email-subscription" -> true,
-                "email-subscription--subscribed" -> emailListing.subscribedTo,
-                "email-subscription--first" -> row.isFirst))">
-                @if(emailListing.subscribedTo){<input type="hidden" name="emailSubscription[]" value="@emailListing.listId" />}
-                <div class="email-subscription__name">@emailListing.name</div>
+            <div class="newsletter-card" data-component="newsletter-card">
 
-                <div class="email-subscription__description">@emailListing.description @if(emailListing.exampleUrl.isDefined){<br><a href="@emailListing.exampleUrl" target="preview-email-@emailListing.listId">See the latest email</a>}</div>
+                <div class="newsletter-card__illustration"></div>
+                <div class="newsletter-card__name">@emailListing.name</div>
 
-                <div class="email-subscription__meta u-cf">
-                    <button class="email-subscription__button js-subscription-button"
-                            data-link-name="@if(emailListing.subscribedTo){Unsubscribe}else{Subscribe} to @emailListing.name"
+                <div class="newsletter-card__description">@emailListing.teaser</div>
+
+                <div class="newsletter-card__meta u-cf">
+                    <div class="newsletter-card__example">
+                @if(emailListing.exampleUrl.isDefined){
+                        <a href="@emailListing.exampleUrl" target="preview-email-@emailListing.listId">
+                            <button class="button button--tertiary newsletter-card__lozenge" data-link-name="@emailListing.name sample">
+                            See the latest email
+                            </button>
+                        </a>}
+                    </div>
+
+
+                    <button class="button button--tertiary newsletter-card__lozenge"
+                            data-link-name="Subscribe to @emailListing.name"
                             name="addEmailSubscription"
                             type="button"
-                            value="@if(emailListing.subscribedTo){unsubscribe-}@emailListing.listId">
-                        @if(emailListing.subscribedTo){Unsubscribe}else{Subscribe}
+                            value="@emailListing.listId">
+                        Sign up
                     </button>
-                    <div class="email-subscription__frequency">
-                        @fragments.inlineSvg("clock", "icon", List("inline-icon--light-grey"))
+
+                    <div class="newsletter-card__frequency">
+                        @fragments.inlineSvg("clock", "icon", List("old-article-message--clock"))
                         @emailListing.frequency
                     </div>
                 </div>
             </div>
         }
-    }
 }
 
 
@@ -41,22 +48,22 @@
 
     <div class="content">
         <div class="gs-container">
-            <div class="content__main-column">
 
-                <div class="newsletter-cards">
-                    <div class="email-subscriptions">
-                        @emailListCategoryList("news", EmailSubscriptions.newsEmails(), true)
-
-                    </div>
-                </div>
-
+            <div class="newsletters__news">
+                @emailListCategoryList("News", EmailSubscriptions.newsEmails(), true)
             </div>
+            <div class="newsletters__sport">
+                @emailListCategoryList("Sport", EmailSubscriptions.sportEmails(), true)
+            </div>
+            <div class="newsletters__culture">
+                @emailListCategoryList("Culture", EmailSubscriptions.cultureEmails(), true)
+            </div>
+
         </div>
     </div>
 
     <div class="content">
         <div class="gs-container">
-            <div class="content__main-column">
 
 
 
