hide play button on pause across all card sizes

--- a/static/src/stylesheets/module/content/_media-player.scss
+++ b/static/src/stylesheets/module/content/_media-player.scss
@@ -171,6 +171,7 @@ $ima-controls-height: 70px;
 
     .vjs-has-started & {
         padding-bottom: 0;
+        display: none;
     }
 
     &:before {
