--- a/common/app/views/fragments/commercial/contentLogo.scala.html
+++ b/common/app/views/fragments/commercial/contentLogo.scala.html
@@ -7,13 +7,15 @@
         <h3 class="brandbadge__header">@branding.label</h3>
         <a href="@branding.sponsorLink" class="brandbadge__link ad-slot--paid-for-badge__link">
             @if(request.isAmp) {
-                <amp-img src="@branding.sponsorLogo.url"
-                    @for(dim <- branding.sponsorLogo.dimensions) {
+                @branding.sponsorLogo.dimensions.map { dim =>
+                    <amp-img src="@branding.sponsorLogo.url"
                         width="@dim.width"
                         height="@dim.height"
-                    }
-                    alt="@{branding.sponsorName}'s logo"
-                    class="brandbadge__logo"></amp-img>
+                        alt="@{branding.sponsorName}'s logo"
+                        class="brandbadge__logo"></amp-img>
+                }.getOrElse {
+                    <p>@branding.sponsorName</p>
+                }
             } else {
                 <img src="@branding.sponsorLogo.url"
                     @for(dim <- branding.sponsorLogo.dimensions) {
