--- a/admin/app/views/radiator.scala.html
+++ b/admin/app/views/radiator.scala.html
@@ -33,11 +33,6 @@
         <div class="cost"><a href="https://console.aws.amazon.com/billing/home"><strong>$@cost.max.toLong</strong> this month</a></div>
     </header>
 
-    <div class="pingdom-wrapper">
-        <h2>Pingdom <small>(external monitoring of our host names)</small></h2>
-        <ul id="pingdom"></ul>
-    </div>
-
     <div class="build-wrapper">
         <h2>Teamcity builds</h2>
         @*
@@ -62,10 +57,19 @@
             }
         </ul>
     </div>
+
     <br clear="all"/>
-    <div class="pageviews-wrapper">
-        <h2>Pageviews <span class="pageviews-per-second"></span></h2>
-        <div id="pageviews"></div>
+    <div>
+        <h2>Pageviews <span class="pageviews-per-second"></span> / Errors</h2>
+        <div id="pageviews" class="chart"></div>
+        @errorCharts.map{ chart => @fragments.lineChart(chart) }
+    </div>
+
+    <br clear="all"/>
+
+    <div class="pingdom-wrapper">
+        <h2>Pingdom <small>(external monitoring of our host names)</small></h2>
+        <ul id="pingdom"></ul>
     </div>
 
     <div class="monitoring-wrapper">
@@ -82,15 +86,16 @@
             <ul class="riffraff" id="riffraffPROD"></ul>
             <ul class="deployers" id="deployersPROD"></ul>
         </div>
+        <a href="/deploys-radiator"> Go to Deploys-Radiator</a>
     </div>
 
-    @graph_group("Errors", errorCharts)
     @graph_group("Latencies", latencyCharts)
+    <a href="/metrics/loadbalancers"> More Latencies</a>
+
     @graph_group("Fastly", fastlyCharts)
 }
 
 @graph_group(title: String, graphs: Seq[tools.AwsLineChart]) = {
-    <br clear="all"/>
     <div>
         <h2>@title</h2>
         @graphs.map{ chart => @fragments.lineChart(chart) }
