--- a/common/app/views/fragments/commercial/contentLogo.scala.html
+++ b/common/app/views/fragments/commercial/contentLogo.scala.html
@@ -7,23 +7,9 @@
         <h3 class="brandbadge__header">@branding.label</h3>
         <a href="@branding.sponsorLink" class="brandbadge__link ad-slot--paid-for-badge__link">
             @if(request.isAmp) {
-                @branding.sponsorLogo.dimensions.map { dim =>
-                    <amp-img src="@branding.sponsorLogo.url"
-                        width="@dim.width"
-                        height="@dim.height"
-                        alt="@{branding.sponsorName}'s logo"
-                        class="brandbadge__logo"></amp-img>
-                }.getOrElse {
-                    <p>@branding.sponsorName</p>
-                }
+                <amp-img class="brandbadge__logo" src="@branding.sponsorLogo" />
             } else {
-                <img src="@branding.sponsorLogo.url"
-                    @for(dim <- branding.sponsorLogo.dimensions) {
-                        width="@dim.width"
-                        height="@dim.height"
-                    }
-                    alt="@{branding.sponsorName}'s logo"
-                    class="brandbadge__logo">
+                <img class="brandbadge__logo" src="@branding.sponsorLogo">
             }
         </a>
         @if(branding.sponsorshipType != PaidContent) {
