--- a/static/src/javascripts/projects/common/views/commercial/survey/survey-adblock.html
+++ b/static/src/javascripts/projects/common/views/commercial/survey/survey-adblock.html
@@ -1,87 +1,61 @@
-<div class="survey-overlay survey-adblock js-survey-adblock is-hidden" data-link-name="adblock response overlay" role="dialog" aria-label="take part in our survey">
+<div class="survey-overlay survey-adblock js-survey-adblock is-hidden" data-link-name="adblock <%=variant%> response overlay" role="dialog" aria-label="take part in our survey">
     <div class="survey-container">
-        <% if (showCloseBtn) { %>
-        <div class="survey-adblock-close js-survey-adblock-close">
-            <%if (showCloseBtn === "delayed") { %>
-            <span class="site-message__close-btn js-survey-adblock__delayed-close is-hidden"><span class="countdown">5</span></span>
-            <button class="site-message__close-btn js-survey-adblock__close-btn is-hidden" data-link-name="survey adblock delayed-dismissed">
-                <span class="is-hidden">Close</span>
-                <%=crossIcon%>
-            </button>
-            <% } else { %>
-            <button class="site-message__close-btn js-survey-adblock__close-btn is-hidden" data-link-name="survey adblock immediate-dismissed">
-                <span class="is-hidden">Close</span>
-                <%=crossIcon%>
-            </button>
+
+        <div class="survey-content-1 rely">
+            <% if (marque36icon) { %>
+            <div class="survey-logo">
+                <%=marque36icon%>
+            </div>
             <% } %>
-        </div>
-        <% } %>
-        <% if (marque36icon) { %>
-        <div class="survey-logo">
-            <%=marque36icon%>
-        </div>
-        <% } %>
-        <div class="survey-icon">
-            <%=surveyOverlaySimple%>
-        </div>
-        <h3 class="survey-text__header">
-            <%=surveyHeader%>
-        </h3>
-        <div class="survey-content">
+            <div class="survey-icon">
+                <%=surveyOverlaySimple%>
+            </div>
+            <h3 class="survey-text__header">
+                Advertising helps fund our journalism
+            </h3>
             <div class="survey-text">
                 <p class="survey-text__strong">
-                    <%=surveyText%>
+                    Some text that explains WTF this is.
                 </p>
-                <% if (surveyTextSecond) { %>
-                    <p class="survey-text__strong">
-                        <%=surveyTextSecond%>
-                    </p>
-                <% } %>
-                <% if (surveyTextThird) { %>
-                <p class="survey-text__info">
-                    <%=surveyTextThird%>
-                </p>
-                <% } %>
-                <% if (membershipLink || signupLink) { %>
-                <div class="survey-links">
-                    <% if (membershipLink) { %>
-                    <div class="survey-link">
-                        <a class="survey-link__takepart" href="<%=membershipLink%>" target="_blank" data-link-name="<%=membershipDataLink%>"><%=membershipText%><%=arrowWhiteRight%></a>
-                    </div>
-                    <% } %>
-                    <% if (signupLink) { %>
-                    <div class="survey-link">
-                        <a class="survey-link__takepart" href="<%=signupLink%>" target="_blank" data-link-name="<%=signupDataLink%>"><%=signupText%><%=arrowWhiteRight%></a>
-                    </div>
-                    <% } %>
-                    <% if (contributorLink) { %>
-                    <div class="survey-link">
-                        <a class="survey-link__takepart" href="<%=signupLink%>" target="_blank" data-link-name="<%=contributorDataLink%>"><%=contributorText%><%=arrowWhiteRight%></a>
-                    </div>
-                    <% } %>
-                </div>
-                <% } %>
-                <% if (surveyTextUserHelp) { %>
-                <p class="survey-text__info">
-                    <%=surveyTextUserHelp%>
-                </p>
-                <% } %>
-                <% if (surveyTextMembership || surveyTextSubscriber) { %>
-                <div class="survey-links">
-                    <hr/>
-                    <% if (surveyTextMembership) { %>
-                    <p class="survey-text__info smaller">
-                        <%=surveyTextMembership%>
-                    </p>
-                    <% } %>
-                    <% if (surveyTextSubscriber) { %>
-                    <p class="survey-text__info smaller">
-                        <%=surveyTextSubscriber%>
-                    </p>
-                    <% } %>
-                </div>
-                <% } %>
             </div>
         </div>
+
+        <div class="survey-link noads-button">
+            <a class="survey-link__takepart" href="#" data-link-name="<%=adFreeDataLink%>"><%=adFreeText%><%=arrowWhiteRight%></a>
+        </div>
+        <div class="survey-link whitelist-button">
+            <a class="survey-link__takepart" href="#" data-link-name="<%=whitelistDataLink%>"><%=whitelistText%><%=arrowWhiteRight%></a>
+        </div>
+
+        <div class="howto-unblock is-hidden">
+            <hr /><p class="survey-text__info">How to allow ads on the Guardian with AdBlock or AdBlock Plus
+            (<a class="text-link" href="/info/2016/mar/21/how-to-disable-your-adblocker-for-theguardiancom?INTCMP=ADB_RESP_<%=variant%>">detailed instructions</a>)</p>
+            <div class="image-link-container"><img src="<%=whitelistGuideImage%>"/></div>
+            <p class="survey-text__info"><strong>Ad Block:</strong> Click the <img alt="adblock" src="<%=adBlockIcon%>" width="20px"/> icon &#x2794; &quot;Don\'t run on pages on this domain&quot; &#x2794; &quot;Exclude&quot;</p>
+            <p class="survey-text__info"><strong>Ad Block Plus:</strong> Click the <img alt="adblock plus" src="<%=adBlockPlusIcon%>" width="20px"/> icon &#x2794; &quot;Disable on theguardian.com&quot;</p>
+            <p class="survey-text__info" style="margin-top: 25px;">After making this change, please reload the page in your browser.</p>
+        </div>
+
+        <div class="survey-content-2 is-hidden pay-method">
+            ! NEEDS CONTENT !
+        </div>
+
+        <div class="survey-content-3 is-hidden whitelist">
+            ! NEEDS CONTENT !
+        </div>
+
+        <div class="survey-content-4 is-hidden thank-you">
+            ! NEEDS CONTENT !
+        </div>
+
+        <div class="survey-links paying">
+            <hr />Already paying?&nbsp;
+            <a class="text-link" href="https://profile.theguardian.com/signin?INTCMP=ADB_RESP_<%=variant%>" data-link-name="adblock supporter <%=variant%>">supporter sign in</a>
+            &nbsp;&nbsp;|&nbsp;&nbsp;
+            <a class="text-link" href="/commercial/subscriber-number" data-link-name="adblock subscriber <%=variant%>">subscriber sign in</a>
+            &nbsp;&nbsp;|&nbsp;&nbsp;
+            <a class="text-link" href="/commercial/contributor-email" data-link-name="adblock contributor <%=variant%>">contributor validation</a>
+        </div>
+
     </div>
 </div>
