--- a/commercial/app/views/hosted/guardianHostedVideo.scala.html
+++ b/commercial/app/views/hosted/guardianHostedVideo.scala.html
@@ -79,7 +79,7 @@
                             </a>
                         </div>
                     </div>
-                    @for(nextPage <- page.nextPage) {
+                    @for(nextPage <- page.nextVideo) {
                     <div class="hosted-next-autoplay js-hosted-next-autoplay" data-link-name="Next video autoplay">
                         <div class="hosted-next-autoplay__cancel">
                             <button class="site-message__close-btn js-autoplay-cancel" data-link-name="Cancel autoplay of the next video">
@@ -87,9 +87,9 @@
                             </button>
                         </div>
                         <div class="hosted-next-autoplay__next-in-series">
-                            <div class="hosted-next-autoplay__subheader">@{page.campaign.name}</div>
+                            <div class="hosted-next-autoplay__subheader">@{page.cta.label}</div>
                             <a href="@{page.cta.url}" rel="nofollow" class="hosted-next-autoplay__tile" data-link-name="@{page.campaign.name}" target="_blank">
-                                Visit @{page.campaign.owner} now @fragments.inlineSvg("arrow-right", "icon", List(""))
+                                @{if(page.cta.btnText.isDefined) page.cta.btnText else s"Visit ${page.campaign.owner} now"}@fragments.inlineSvg("arrow-right", "icon", List(""))
                             </a>
                         </div>
                         <div class="hosted-next-autoplay__video">
