--- a/static/src/stylesheets/module/commercial/_adverts.scss
+++ b/static/src/stylesheets/module/commercial/_adverts.scss
@@ -583,7 +583,7 @@
     color: $neutral-2;
     font-weight: bold;
     margin-top: $gs-baseline / 2;
-    padding-right: $gs-gutter;
+    padding-right: $gs-gutter / 2;
     text-align: right;
 
     .adverts__more + & {
@@ -596,10 +596,21 @@
 }
 
 .adverts__badge--alt {
+    float: left;
+    clear: left;
     border-top: 1px dotted $neutral-5;
     margin-top: $gs-baseline / 3;
     padding-top: $gs-baseline / 6;
     text-align: left;
+    padding-right: 0;
+
+    @include mq(leftCol) {
+        width: $left-column;
+    }
+
+    @include mq(wide) {
+        width: $left-column-wide;
+    }
 
     > .adverts__badge__link,
     .adverts__badge__logo {
@@ -618,7 +629,40 @@
 
     > .adverts__badge__help {
         @include font-size(11);
+        color: $paid-article-icon;
+        font-weight: normal;
     }
+}
+
+.adverts__badge--interactive {
+    float: right;
+    clear: right;
+    min-height: 135px;
+    border-top: 1px dotted $paid-article-icon;
+
+    @include mq(desktop) {
+        position: absolute;
+        top: $gs-baseline / 2;
+        right: -1 * (gs-span(4) + $gs-gutter / 2);
+    }
+
+    @include mq(wide) {
+        right: -1 * (gs-span(5) + $gs-gutter);
+    }
+
+    .adverts__badge__link {
+        border-bottom-color: $paid-article-icon;
+    }
+}
+
+.advert--card-branding {
+    margin-bottom: 96px; //$gs-row-height + height of the logo
+}
+
+.adverts__badge--card-branding {
+    position: absolute;
+    right: 0;
+    bottom: 10px;
 }
 
 .adverts__badge__logo {
