--- a/common/app/views/fragments/inlineJSNonBlocking.scala.html
+++ b/common/app/views/fragments/inlineJSNonBlocking.scala.html
@@ -19,6 +19,9 @@
     @InlineJs(showUserName().body, "showUserName.js")
 }
 
+// editionalise new header navigation
+@InlineJs(editionaliseMenu().body, "editionaliseMenu.js")
+
 // ************* ANALYTICS *************
 
 // Ophan pageview ID and browser ID are needed by Google Analytics, which runs just after this script tag
