--- a/common/app/views/commercial/cards/itemSmallCard.scala.html
+++ b/common/app/views/commercial/cards/itemSmallCard.scala.html
@@ -18,7 +18,7 @@
     </p>
     @if(useCardBranding) {
         @for(branding <- item.branding) {
-            @contentLogo(branding, isInteractivePage = false)
+            @contentLogo(branding, isInteractivePage = false, isCardBranding = false, isOnTheLeft = false)
         }
     }
 </a>
