--- a/static/src/stylesheets/module/commercial/_adverts.scss
+++ b/static/src/stylesheets/module/commercial/_adverts.scss
@@ -619,7 +619,7 @@
 
     .adverts__badge__logo {
         max-height: 6 * $gs-baseline;
-        margin: 0;
+        margin: 0 0 5px 0;
     }
 
     > .adverts__badge__link {
