--- a/static/src/stylesheets/module/commercial/_capi.scss
+++ b/static/src/stylesheets/module/commercial/_capi.scss
@@ -201,4 +201,9 @@
         }
     }
 
+    .adverts__badge--alt,
+    .adverts__badge--alt > .adverts__badge__link {
+        border-color: $neutral-2;
+    }
+
 }
