--- a/common/app/views/commercial/cards/itemCard.scala.html
+++ b/common/app/views/commercial/cards/itemCard.scala.html
@@ -35,7 +35,7 @@
     </a>
     @if(useCardBranding) {
         @for(branding <- item.branding) {
-            @contentLogo(branding, isInteractivePage = false, isCardBranding = true)
+            @contentLogo(branding, isInteractivePage = false, isCardBranding = true, isOnTheLeft = false)
         }
     }
 </div>
