--- a/common/app/views/commercial/containers/paidContainer.scala.html
+++ b/common/app/views/commercial/containers/paidContainer.scala.html
@@ -80,6 +80,6 @@
 
 @logoSlot = {
     @for(branding <- containerModel.branding) {
-        @contentLogo(branding, isInteractivePage = false)
+        @contentLogo(branding, isInteractivePage = false, isCardBranding = false, isOnTheLeft = false)
     }
 }
