use correct scala comment syntax

--- a/common/app/views/fragments/amp/googleAnalytics.scala.html
+++ b/common/app/views/fragments/amp/googleAnalytics.scala.html
@@ -2,7 +2,7 @@
 
 @import views.support.GoogleAnalyticsAccount
 
-//TODO: Abstract this out so its shared with the main GA tracking
+@* TODO: Abstract this out so its shared with the main GA tracking *@
 <amp-analytics type="googleanalytics" id="google-analytics">
     <script type="application/json">
             {
