--- a/static/src/stylesheets/module/commercial/glabs/_hosted.scss
+++ b/static/src/stylesheets/module/commercial/glabs/_hosted.scss
@@ -952,3 +952,7 @@ $hosted-video-height: 540px;
         line-height: 20px;
     }
 }
+
+iframe + .hosted-fading .hosted__video-overlay {
+    display: none;
+}
