video article and live blog pages done

--- a/common/app/views/fragments/commercial/contentLogo.scala.html
+++ b/common/app/views/fragments/commercial/contentLogo.scala.html
@@ -1,4 +1,4 @@
-@(branding: common.commercial.Branding, isInteractivePage: Boolean, isCardBranding: Boolean, isContainer: Boolean)(implicit request: RequestHeader)
+@(branding: common.commercial.Branding, isInteractivePage: Boolean, isCardBranding: Boolean, isOnTheLeft: Boolean)(implicit request: RequestHeader)
 @import common.commercial.PaidContent
 @import implicits.Requests.RichRequestHeader
 
