--- a/common/app/views/fragments/commercial/badge.scala.html
+++ b/common/app/views/fragments/commercial/badge.scala.html
@@ -3,5 +3,5 @@
 @import views.html.fragments.commercial.contentLogo
 
 @for(branding <- page.branding(Edition(request))) {
-    @contentLogo(branding, content.tags.isInteractive, isCardBranding = false, isOnTheLeft = false)
+    @contentLogo(branding, content.tags.isInteractive, isCardBranding = false, isOnTheLeft = true)
 }
